client/src/components/Navbar/Navbar.css
h1{
    font-family: 'Fredoka One', cursive;
    font-weight: 600;
    color: #304ffe;
    margin-left: 5%;
}

a{
    text-decoration: none;
}
.header-txt{
    font-family: 'Fredoka One', cursive;
    font-weight: 600;
    color: #304ffe;
    margin-left: 25%;
}
.nb-title-left{
    float: none;
    position: absolute;
    top: 50%;
    left: 5%;
    transform: translate(-50%, -50%);
}
.dot{
    color: #67d9fc;
    font-size:25px;
}

.dropdown{
    display: none;
    position: absolute;
    top: 50px;
    z-index: 12;
    height: 170px;
    background-color: rgb(255, 255, 255);
    border-radius: 5%;
    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.479);
    transition: 1.3s ease-in;
}

.dropdown-gr{
    display: none;
    width: 40%;
    position: absolute;
    top: 50px;
    z-index: 12;
    height: 170px;
    background-color: rgb(255, 255, 255);
    border-radius: 5%;
    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.479);
    transition: 1.3s ease-in;
    margin-left: -1%;
}
.dropdown-links{
    display:flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin-top: 10%;
    margin-left: -15%;
    width: 13vw;
    
}
.dropdown-links li a{
    font-size: 15px;
}
ul{
    list-style: none;
}

.hasDropdown-2:hover .dropdown{
    display: flex;
}

.hasDropdown-1:hover .dropdown-gr{
    display: flex;
   
}


.hasDropdown-1:hover .dropdown{
    display: flex;
  
}

.navlink{
    height: 70px;
}

nav{
    position: relative;
    background-color: rgb(255, 255, 255);
    height: 90px;
    box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.479);
    z-index: 100;
    width: 100vw;
   
}
.nav-menu-center{
    float: none;
    position: absolute;
    top: 80%;
    left: 45%;
    transform: translate(-50%, -50%);
    z-index: 10;
}
.nb-btn-group-right{
    display: flex;
    float: none;
    position: absolute;
    top: 50%;
    left: 90%;
    transform: translate(-50%, -50%);
}

.nb-btn-group-right a{
   margin-left: 3%;
}
.nb-menu-burger-menu{
    display: none;
}
.nb-menu-burger-menu div{
    height: 3px;
    width: 30px;
    background-color: rgb(0, 0, 0);
    margin-top: 13%;
    transition: all 0.2s ease-in;
    border-radius: 30%;
}
.navlinks-wrapper{
    display: flex;
}
.navlinks-wrapper li{
    margin-left: 30px;
    list-style: none;
    font-size: 18px;
}
.nav-active{
    transform: translateX(0px);
}
.navlink a{
    text-decoration: none;
    text-transform: uppercase;
    color: rgb(75, 75, 75);
    font-family: 'Open Sans', sans-serif;
}
.navlink a:hover{
    color: #304ffe;
    transition: 0.3s ease-in;
}

.active{
    color: #304ffe !important;
}

/* Responsive navigation menu (for mobile devices) */
@media screen and (max-width: 1124px) {
    nav{
        width: 70%;
        height: 100vh;
        transform: translateX(-850px);
        transition: 0.5s ease-in;
        position: absolute;
        background: #fff;
        z-index: 30;
        
    }
    .header-txt{
        margin-left: 0%;
        margin-top: -10%;
    }
    .navlinks-wrapper{
        display: block;
    }
    .nav  {
      float: none;
      display: block;
    }
    
    .nav-menu-center {
      position: absolute;
      top: -10px;
      left: 0;
      transform: none;
    }
    .nb-menu-burger-menu{
        display: inline;
        float: right;
        height: 30px;
        cursor: pointer;
        position: absolute;
        right:  50px;
        top: 0;
        transform: translate(50%, 50%);
        z-index: 10;
    }
    .nav-menu-center{
        margin-top: 40%;
    }
    .navlinks-wrapper li{
        margin-top: 10%;
    }
    .nb-title-left{
        top: 45px;
        left: 50%;
    }
    .nb-btn-group-right{
       flex-wrap: wrap;
       margin-left: -35%;
       margin-top: 60%;
       justify-content: center;
    }
    .nb-btn-group-right a{
        margin-top: 10%;
    }

    .dropdown{
        top: 90%;
        width: 90%;
        left: 0;
        box-shadow: none;
    }
    .dropdown-gr{
        top: 70%;
        width: 100%;
        left: 0;
        box-shadow: none;
       
    }
    .set-d-n{
        display: none !important;
    }
    .set-mt{
        position: absolute;
        bottom: -225px;
        transition: 0.3s ease-in;
    }
    .set-mt2{
        position: absolute;
        top: 365px;
        transition: 0.3s ease-in;
    }

  }

  .toggle .line1{
    transform: rotate(-45deg) translate(-5px, 6px); 
  }

  .toggle .line2{
      transform: translateX(150px);
}

.toggle .line3{
    transform: rotate(45deg) translate(-5px, -6px); 
}

